--- a/css/styles.css
+++ b/css/styles.css
@@ -1,12 +1,15 @@
 @charset "utf-8";
 
 /* CSS Document */
+*, *::before, *::after {
+  box-sizing: border-box;
+}
 
 body,
 td,
 th,
 p {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Open Sans", Arial, sans-serif;
   font-size: 10pt;
   color: #333;
   line-height: 1.5;
@@ -14,13 +17,15 @@ p {
 
 body {
   background-color: #fdfdfd;
-  margin: 0;
+  margin: 0 auto;
   position: relative;
+	width: 100%;
+	max-width: 1600px;
 }
 
 ul,
 li {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Open Sans", Arial, sans-serif;
   font-size: 10pt;
   color: #333;
 }
@@ -40,13 +45,22 @@ a img {
   border: none 0px #fff;
 }
 
+img, embed, object, video {
+  max-width: 100%;
+}
+
+nav a, button {
+  min-width: 48px;
+  min-height: 48px;
+}
+
 h1,
 h2,
 h3,
 h4,
 h5,
 h6 {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Open Sans", Arial, sans-serif;
   margin: 0 0 20px;
 }
 
@@ -65,7 +79,7 @@ section {
   display: block;
 }
 
-#maincontent {
+#main-content {
   background-color: #f3f3f3;
   min-height: 100%;
 }
@@ -83,11 +97,12 @@ section {
 
 /* ====================== Navigation ====================== */
 
-nav {
+header {
   width: 100%;
-  height: 80px;
+  min-height: 56px;
   background-color: #252831;
   text-align: center;
+	padding: 1em;
 }
 
 nav h1 {
@@ -173,7 +188,7 @@ nav h1 a {
 .filter-options select {
   background-color: white;
   border: 1px solid #fff;
-  font-family: Arial, sans-serif;
+  font-family: "Open Sans", Arial, sans-serif;
   font-size: 11pt;
   height: 35px;
   letter-spacing: 0;
@@ -209,13 +224,12 @@ nav h1 a {
   display: block;
   margin: 0;
   max-width: 100%;
-  min-height: 248px;
-  min-width: 100%;
+  height: auto;
 }
 
 #restaurants-list li h1 {
   color: #f18200;
-  font-family: Arial, sans-serif;
+  font-family: "Open Sans", Arial, sans-serif;
   font-size: 14pt;
   font-weight: 200;
   letter-spacing: 0;
@@ -275,7 +289,7 @@ nav h1 a {
 
 #restaurant-name {
   color: #f18200;
-  font-family: Arial, sans-serif;
+  font-family: "Open Sans", Arial, sans-serif;
   font-size: 20pt;
   font-weight: 200;
   letter-spacing: 0;
