--- a/css/styles.css
+++ b/css/styles.css
@@ -10,7 +10,7 @@ td,
 th,
 p {
   font-family: "Open Sans", Arial, sans-serif;
-  font-size: 10pt;
+  font-size: 16px;
   color: #333;
   line-height: 1.5;
 }
@@ -45,11 +45,15 @@ a img {
   border: none 0px #fff;
 }
 
-img, embed, object, video {
+img,
+embed,
+object,
+video {
   max-width: 100%;
 }
 
-nav a, button {
+nav a,
+button {
   min-width: 48px;
   min-height: 48px;
 }
@@ -82,6 +86,8 @@ section {
 #main-content {
   background-color: #f3f3f3;
   min-height: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
 #footer {
@@ -204,11 +210,15 @@ nav h1 a {
   background-color: #f3f3f3;
   list-style: outside none none;
   margin: 0;
-  padding: 30px 15px 60px;
+  padding: 20px;
   text-align: center;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
-#restaurants-list li {
+#restaurants-list article {
   background-color: #fff;
   border: 2px solid #ccc;
   font-family: Arial, sans-serif;
@@ -227,7 +237,7 @@ nav h1 a {
   height: auto;
 }
 
-#restaurants-list li h1 {
+#restaurants-list article h1 {
   color: #f18200;
   font-family: "Open Sans", Arial, sans-serif;
   font-size: 14pt;
@@ -243,7 +253,7 @@ nav h1 a {
   font-size: 11pt;
 }
 
-#restaurants-list li a {
+#restaurants-list article a {
   background-color: orange;
   border-bottom: 3px solid #eee;
   color: #fff;
@@ -320,7 +330,8 @@ nav h1 a {
   width: 90%;
 }
 
-#restaurant-container, #reviews-container {
+#restaurant-container,
+#reviews-container {
   border-bottom: 1px solid #d9d9d9;
   border-top: 1px solid #fff;
   padding: 140px 40px 30px;
@@ -344,7 +355,7 @@ nav h1 a {
   padding: 0;
 }
 
-#reviews-list li {
+#reviews-list article {
   background-color: #fff;
   border: 2px solid #f3f3f3;
   display: block;
@@ -356,7 +367,7 @@ nav h1 a {
   width: 85%;
 }
 
-#reviews-list li p {
+#reviews-list article p {
   margin: 0 0 10px;
 }
 
