--- a/css/styles.css
+++ b/css/styles.css
@@ -178,9 +178,9 @@ nav h1 a {
 
 .filter-options {
   width: 100%;
-  height: 50px;
-  background-color: #3397DB;
+  background-color: #252831;
   align-items: center;
+  padding: 5px;
 }
 
 .filter-options h2 {
@@ -188,7 +188,7 @@ nav h1 a {
   font-size: 1rem;
   font-weight: normal;
   line-height: 1;
-  margin: 0 20px;
+  margin: 10px;
 }
 
 .filter-options select {
@@ -200,7 +200,8 @@ nav h1 a {
   letter-spacing: 0;
   margin: 10px;
   padding: 0 10px;
-  width: 200px;
+  max-width: 200px;
+  width: 100%;
 }
 
 
@@ -224,9 +225,10 @@ nav h1 a {
   font-family: Arial, sans-serif;
   margin: 15px;
   min-height: 380px;
-  padding: 0 30px 25px;
+  padding: 20px;
   text-align: left;
   width: 270px;
+  min-width: 270px;
 }
 
 #restaurants-list .restaurant-img {
