style: Changed reviews section to different style

--- a/css/styles.css
+++ b/css/styles.css
@@ -28,6 +28,7 @@ li {
   font-family: "Open Sans", Arial, sans-serif;
   font-size: 10pt;
   color: #333;
+  list-style: none;
 }
 
 a {
@@ -68,6 +69,17 @@ h6 {
   margin: 0 0 20px;
 }
 
+h2 {
+  font-size: 33px;
+}
+
+h3 {
+  font-weight: 600;
+  color: #f18200;
+  font-size: 26px;
+  text-transform: uppercase;
+}
+
 article,
 aside,
 canvas,
@@ -106,9 +118,12 @@ section {
 header {
   width: 100%;
   min-height: 56px;
-  background-color: #252831;
   text-align: center;
-	padding: 1em;
+}
+
+nav {
+  background-color: #252831;
+  padding: 1em;
 }
 
 nav h1 {
@@ -129,7 +144,8 @@ nav h1 a {
   background-color: #eee;
   font-size: 17px;
   margin: 0;
-  width: calc(50% - 80px);
+  /*width: calc(50% - 80px);*/
+  max-width: 100%;
 }
 
 
@@ -271,21 +287,21 @@ nav h1 a {
 
 
 /* ====================== Restaurant Details ====================== */
-
+/*
 .inside header {
   position: fixed;
   top: 0;
   width: 100%;
   z-index: 1000;
-}
+} */
 
 .inside #map-container {
   background: blue none repeat scroll 0 0;
-  height: 87%;
-  position: fixed;
-  right: 0;
-  top: 80px;
-  width: 50%;
+  height: 30vh;
+  /*position: fixed;*/
+  /*right: 0;*/
+  /*top: 80px;*/
+  width: 100%;
 }
 
 .inside #map {
@@ -295,15 +311,14 @@ nav h1 a {
 }
 
 .inside #footer {
-  bottom: 0;
-  position: absolute;
-  width: 50%;
+  /*bottom: 0;*/
+  /*position: absolute;*/
+  width: 100%;
 }
 
 #restaurant-name {
   color: #f18200;
   font-family: "Open Sans", Arial, sans-serif;
-  font-size: 20pt;
   font-weight: 200;
   letter-spacing: 0;
   margin: 15px 0 30px;
@@ -312,7 +327,7 @@ nav h1 a {
 }
 
 #restaurant-img {
-  width: 90%;
+  width: 100%;
 }
 
 #restaurant-address {
@@ -323,26 +338,31 @@ nav h1 a {
 #restaurant-cuisine {
   background-color: #333;
   color: #ddd;
-  font-size: 12pt;
+  font-size: 16px;
   font-weight: 300;
   letter-spacing: 10px;
   margin: 0 0 20px;
   padding: 2px 0;
   text-align: center;
   text-transform: uppercase;
-  width: 90%;
+  width: 100%;
 }
 
 #restaurant-container,
 #reviews-container {
   border-bottom: 1px solid #d9d9d9;
   border-top: 1px solid #fff;
-  padding: 140px 40px 30px;
-  width: 50%;
+  padding: 20px;
+  width: 100%;
+  justify-content: center;
+  /*display: flex;*/
+  flex-wrap: wrap;
 }
 
 #reviews-container {
-  padding: 30px 40px 80px;
+  /*padding: 30px 40px 80px;*/
+  padding: 20px;
+  background: #fff;
 }
 
 #reviews-container h2 {
@@ -372,6 +392,19 @@ nav h1 a {
 
 #reviews-list article p {
   margin: 0 0 10px;
+}
+
+#reviews-list li {
+  border-bottom: 1px solid #333;
+  margin: 15px 0 0 0;
+}
+
+#reviews-list p[class*='review-'] {
+  margin: 2px 0;
+}
+
+#reviews-list p.review-name {
+  font-weight: 600;
 }
 
 #restaurant-hours td {
