--- a/css/styles.css
+++ b/css/styles.css
@@ -75,7 +75,7 @@ h2 {
 
 h3 {
   font-weight: 600;
-  color: #f18200;
+  color: #6B47C7;
   font-size: 26px;
   text-transform: uppercase;
 }
@@ -318,7 +318,7 @@ nav h1 a {
 }
 
 #restaurant-name {
-  color: #f18200;
+  color: #6B47C7;
   font-family: "Open Sans", Arial, sans-serif;
   font-weight: 200;
   letter-spacing: 0;
@@ -369,7 +369,7 @@ nav h1 a {
 }
 
 #reviews-container h2 {
-  color: #f58500;
+  color: #6B47C7;
   font-size: 24pt;
   font-weight: 300;
   letter-spacing: -1px;
