--- a/css/styles.css
+++ b/css/styles.css
@@ -75,7 +75,7 @@ h2 {
 
 h3 {
   font-weight: 600;
-  color: #6B47C7;
+  color: #921a6e;
   font-size: 26px;
   text-transform: uppercase;
 }
@@ -257,14 +257,14 @@ nav h1 a {
 }
 
 #restaurants-list article h3 {
-  color: #e87d0c;
+  color: #921a6e;
   font-family: "Open Sans", Arial, sans-serif;
   font-size: 14pt;
   font-weight: 200;
   letter-spacing: 0;
   line-height: 1.3;
   margin: 20px 0 10px;
-  text-transform: uppercase;
+  text-transform: capitalize;
 }
 
 #restaurants-list p {
@@ -273,8 +273,8 @@ nav h1 a {
 }
 
 #restaurants-list article button {
-  background-color: #e87d0c;
-  border-bottom: 3px solid #eee;
+  background-color: #921a6e;
+  border-bottom: 3px solid #921a6e;
   color: #fff;
   display: inline-block;
   font-size: 10pt;
@@ -318,24 +318,26 @@ nav h1 a {
 }
 
 #restaurant-name {
-  color: #6B47C7;
+  color: #921a6e;
   font-family: "Open Sans", Arial, sans-serif;
   font-weight: 200;
   letter-spacing: 0;
   margin: 15px 0 30px;
-  text-transform: uppercase;
+  text-transform: capitalize;
   line-height: 1.1;
 }
 
 #restaurant-img {
   width: 100%;
   overflow: hidden;
-  height: 40vh;
+  /*height: 40vh;*/
 }
 
 #restaurant-address {
-  font-size: 12pt;
+  font-size: 16px;
+  font-weight: 700;
   margin: 10px 0px;
+  width: 100%;
 }
 
 #restaurant-cuisine {
@@ -369,7 +371,7 @@ nav h1 a {
 }
 
 #reviews-container h2 {
-  color: #6B47C7;
+  color: #921a6e;
   font-size: 24pt;
   font-weight: 300;
   letter-spacing: -1px;
@@ -398,8 +400,8 @@ nav h1 a {
 }
 
 #reviews-list li {
-  border-bottom: 1px solid #333;
-  margin: 15px 0 0 0;
+  border-bottom: 1px solid #a1a1a1;
+  margin: 15px;
 }
 
 #reviews-list li:last-of-type {
@@ -412,6 +414,7 @@ nav h1 a {
 
 #reviews-list p.review-name {
   font-weight: 600;
+  color: #921a6e;
 }
 
 #reviews-list p.review-name:after {
@@ -426,4 +429,5 @@ nav h1 a {
 
 #restaurant-hours td {
   color: #666;
+  font-size: 14px;
 }
