--- a/css/styles.css
+++ b/css/styles.css
@@ -25,7 +25,7 @@ body {
 ul,
 li {
   font-family: "Open Sans", Arial, sans-serif;
-  font-size: 10pt;
+  font-size: 16px;
   color: #333;
   list-style: none;
 }
@@ -104,7 +104,7 @@ section {
 #footer {
   background-color: #444;
   color: #b1b1b1;
-  font-size: 8pt;
+  font-size: 16px;
   letter-spacing: 1px;
   padding: 25px;
   text-align: center;
@@ -131,7 +131,7 @@ nav h1 {
 
 nav h1 a {
   color: #fff;
-  font-size: 14pt;
+  font-size: 30px;
   font-weight: 200;
   letter-spacing: 10px;
   text-transform: uppercase;
@@ -205,7 +205,7 @@ nav h1 a {
 
 .filter-options h2 {
   color: white;
-  font-size: 1rem;
+  font-size: 18px;
   font-weight: normal;
   line-height: 1;
   margin: 10px;
@@ -215,7 +215,7 @@ nav h1 a {
   background-color: white;
   border: 1px solid #fff;
   font-family: "Open Sans", Arial, sans-serif;
-  font-size: 11pt;
+  font-size: 16px;
   height: 35px;
   letter-spacing: 0;
   margin: 10px;
@@ -247,7 +247,6 @@ nav h1 a {
   min-height: 380px;
   padding: 20px;
   text-align: left;
-  width: 30%;
   max-width: 300px;
 }
 
@@ -263,7 +262,7 @@ nav h1 a {
 #restaurants-list article h3 {
   color: #921a6e;
   font-family: "Open Sans", Arial, sans-serif;
-  font-size: 14pt;
+  font-size: 22px;
   font-weight: 200;
   letter-spacing: 0;
   line-height: 1.3;
@@ -273,7 +272,7 @@ nav h1 a {
 
 #restaurants-list p {
   margin: 0;
-  font-size: 11pt;
+  font-size: 16px;
 }
 
 #restaurants-list article button {
@@ -281,7 +280,7 @@ nav h1 a {
   border-bottom: 3px solid #921a6e;
   color: #fff;
   display: inline-block;
-  font-size: 10pt;
+  font-size: 16px;
   margin: 15px 0 0;
   padding: 8px 30px 10px;
   text-align: center;
@@ -335,7 +334,7 @@ nav h1 a {
 #restaurant-img {
   width: 100%;
   overflow: hidden;
-  /*height: 40vh;*/
+  height: 100%;
 }
 
 #restaurant-details {
@@ -414,7 +413,7 @@ article .restaurant-copy {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  min-height: 120px;
+  min-height: 135px;
 }
 
 #reviews-list article p {
@@ -451,11 +450,34 @@ article .restaurant-copy {
 
 #restaurant-hours td {
   color: #666;
-  font-size: 14px;
+  font-size: 16px;
 }
 
 
 /* ====================== Accessibility ====================== */
 label {
   display: none;
+}
+
+
+/* ====================== DESKTOP ====================== */
+
+@media only screen and (min-width: 1024px) {
+
+  /* body,
+  p,
+  button,
+  select {
+    font-size: 16px;
+  } */
+
+  #footer {
+    font-size: 8pt;
+  }
+
+  #restaurants-list article {
+    width: 30%;
+  }
+
+
 }
