--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,10 +1,14 @@
-/* CSS Document */
+@charset "utf-8";
 
+/* CSS Document */
 *, *::before, *::after {
   box-sizing: border-box;
 }
 
-body, td, th, p {
+body,
+td,
+th,
+p {
   font-family: "Open Sans", Arial, sans-serif;
   font-size: 16px;
   color: #333;
@@ -15,10 +19,11 @@ body {
   background-color: #fdfdfd;
   margin: 0 auto;
   position: relative;
-  width: 100%;
+	width: 100%;
 }
 
-ul, li {
+ul,
+li {
   font-family: "Open Sans", Arial, sans-serif;
   font-size: 16px;
   color: #333;
@@ -30,7 +35,8 @@ a {
   text-decoration: none;
 }
 
-a:hover, a:focus {
+a:hover,
+a:focus {
   color: #3397db;
   text-decoration: none;
 }
@@ -39,16 +45,25 @@ a img {
   border: none 0px #fff;
 }
 
-img, embed, object, video {
+img,
+embed,
+object,
+video {
   max-width: 100%;
 }
 
-nav a, button {
+nav a,
+button {
   min-width: 48px;
   min-height: 48px;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   font-family: "Open Sans", Arial, sans-serif;
   margin: 0 0 20px;
 }
@@ -64,7 +79,18 @@ h3 {
   text-transform: uppercase;
 }
 
-article, aside, canvas, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
+article,
+aside,
+canvas,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
   display: block;
 }
 
@@ -92,23 +118,25 @@ header {
   width: 100%;
   min-height: 56px;
   text-align: center;
-}
 
-header div {
-  background-color: #252831;
-  padding: 1em;
-}
+  div {
+    background-color: #252831;
+    padding: 1em;
+  }
 
-header h1 {
-  margin: auto;
-}
+  h1 {
+    margin: auto;
 
-header h1 a {
-  color: #fff;
-  font-size: 30px;
-  font-weight: 200;
-  letter-spacing: 10px;
-  text-transform: uppercase;
+    a {
+      color: #fff;
+      font-size: 30px;
+      font-weight: 200;
+      letter-spacing: 10px;
+      text-transform: uppercase;
+    }
+
+  }
+
 }
 
 #breadcrumb {
@@ -162,10 +190,9 @@ header h1 a {
   background-color: #ccc;
 }
 
-.leaflet-control-attribution.leaflet-control a {
+.leaflet-control-attribution.leaflet-control a{
   color: #0075a4;
 }
-
 
 /* ====================== Restaurant Filtering ====================== */
 
@@ -215,61 +242,61 @@ header h1 a {
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: center;
-}
 
-#restaurants-list article {
-  background-color: #fff;
-  border: 2px solid #ccc;
-  font-family: Arial, sans-serif;
-  margin: 15px;
-  min-height: 380px;
-  padding: 20px;
-  text-align: left;
-  max-width: 300px;
-}
+  article {
+    background-color: #fff;
+    border: 2px solid #ccc;
+    font-family: Arial, sans-serif;
+    margin: 15px;
+    min-height: 380px;
+    padding: 20px;
+    text-align: left;
+    max-width: 300px;
 
-#restaurants-list article h3 {
-  color: #921a6e;
-  font-family: "Open Sans", Arial, sans-serif;
-  font-size: 22px;
-  font-weight: 200;
-  letter-spacing: 0;
-  line-height: 1.3;
-  margin: 20px 0 10px;
-  text-transform: capitalize;
-}
+    h3 {
+      color: #921a6e;
+      font-family: "Open Sans", Arial, sans-serif;
+      font-size: 22px;
+      font-weight: 200;
+      letter-spacing: 0;
+      line-height: 1.3;
+      margin: 20px 0 10px;
+      text-transform: capitalize;
+    }
 
-#restaurants-list article button {
-  background-color: #921a6e;
-  border-bottom: 3px solid #921a6e;
-  color: #fff;
-  display: inline-block;
-  font-size: 16px;
-  margin: 15px 0 0;
-  padding: 8px 30px 10px;
-  text-align: center;
-  text-decoration: none;
-  text-transform: uppercase;
-  width: 100%;
-}
+    button {
+      background-color: #921a6e;
+      border-bottom: 3px solid #921a6e;
+      color: #fff;
+      display: inline-block;
+      font-size: 16px;
+      margin: 15px 0 0;
+      padding: 8px 30px 10px;
+      text-align: center;
+      text-decoration: none;
+      text-transform: uppercase;
+      width: 100%;
+    }
 
-#restaurants-list p {
-  margin: 0;
-  font-size: 16px;
-}
+  }
 
-#restaurants-list .restaurant-img {
-  display: block;
-  margin: 0;
-  max-width: 100%;
-  height: auto;
-  overflow: hidden;
+  p {
+    margin: 0;
+    font-size: 16px;
+  }
+
+  .restaurant-img {
+    display: block;
+    margin: 0;
+    max-width: 100%;
+    height: auto;
+    overflow: hidden;
+  }
+
 }
 
 
 /* ====================== Restaurant Details ====================== */
-
-
 /*
 .inside header {
   position: fixed;
@@ -323,6 +350,7 @@ header h1 a {
   width: 100%;
 }
 
+
 #restaurant-address {
   font-size: 16px;
   font-weight: 700;
@@ -343,7 +371,8 @@ header h1 a {
   width: 100%;
 }
 
-#restaurant-container, #reviews-container {
+#restaurant-container,
+#reviews-container {
   border-bottom: 1px solid #d9d9d9;
   border-top: 1px solid #fff;
   padding: 20px;
@@ -420,7 +449,8 @@ article .restaurant-copy {
   margin: 0 5px;
 }
 
-#reviews-list p.review-name, #reviews-list p.review-date {
+#reviews-list p.review-name,
+#reviews-list p.review-date {
   display: inline-block;
 }
 
@@ -431,7 +461,6 @@ article .restaurant-copy {
 
 
 /* ====================== Accessibility ====================== */
-
 label {
   display: none;
 }
@@ -440,16 +469,21 @@ label {
 /* ====================== DESKTOP ====================== */
 
 @media only screen and (min-width: 1024px) {
+
   /* body,
   p,
   button,
   select {
     font-size: 16px;
   } */
+
   #footer {
     font-size: 8pt;
   }
+
   #restaurants-list article {
     width: 30%;
   }
+
+
 }
