--- a/css/styles.css
+++ b/css/styles.css
@@ -1,84 +1,73 @@
 /* CSS Document */
+
 *, *::before, *::after {
   -webkit-box-sizing: border-box;
-          box-sizing: border-box; }
+  box-sizing: border-box;
+}
 
-body,
-td,
-th,
-p {
+body, td, th, p {
   font-family: "Open Sans", Arial, sans-serif;
   font-size: 16px;
   color: #333;
-  line-height: 1.5; }
+  line-height: 1.5;
+}
 
 body {
   background-color: #fdfdfd;
   margin: 0 auto;
   position: relative;
-  width: 100%; }
+  width: 100%;
+}
 
-ul,
-li {
+ul, li {
   font-family: "Open Sans", Arial, sans-serif;
   font-size: 16px;
   color: #333;
-  list-style: none; }
+  list-style: none;
+}
 
 a {
   color: orange;
-  text-decoration: none; }
+  text-decoration: none;
+}
 
-a:hover,
-a:focus {
+a:hover, a:focus {
   color: #3397db;
-  text-decoration: none; }
+  text-decoration: none;
+}
 
 a img {
-  border: none 0px #fff; }
+  border: none 0px #fff;
+}
 
-img,
-embed,
-object,
-video {
-  max-width: 100%; }
+img, embed, object, video {
+  max-width: 100%;
+}
 
-nav a,
-button {
+nav a, button {
   min-width: 48px;
-  min-height: 48px; }
+  min-height: 48px;
+}
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
+h1, h2, h3, h4, h5, h6 {
   font-family: "Open Sans", Arial, sans-serif;
-  margin: 0 0 20px; }
+  margin: 0 0 20px;
+}
 
 h2 {
-  font-size: 33px; }
+  font-size: 33px;
+}
 
 h3 {
   font-weight: 600;
   color: #921a6e;
   font-size: 26px;
-  text-transform: uppercase; }
+  text-transform: uppercase;
+}
 
-article,
-aside,
-canvas,
-details,
-figcaption,
-figure,
-footer,
-header,
-hgroup,
-menu,
-nav,
-section {
-  display: block; }
+article, aside, canvas, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
+  display: block;
+}
 
 #main-content {
   background-color: #f3f3f3;
@@ -88,8 +77,9 @@ section {
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column; }
+  -ms-flex-direction: column;
+  flex-direction: column;
+}
 
 #footer {
   background-color: #444;
@@ -98,24 +88,34 @@ section {
   letter-spacing: 1px;
   padding: 25px;
   text-align: center;
-  text-transform: uppercase; }
+  text-transform: uppercase;
+}
+
 
 /* ====================== Navigation ====================== */
+
 header {
   width: 100%;
   min-height: 56px;
-  text-align: center; }
-  header div {
-    background-color: #252831;
-    padding: 1em; }
-  header h1 {
-    margin: auto; }
-    header h1 a {
-      color: #fff;
-      font-size: 30px;
-      font-weight: 200;
-      letter-spacing: 10px;
-      text-transform: uppercase; }
+  text-align: center;
+}
+
+header div {
+  background-color: #252831;
+  padding: 1em;
+}
+
+header h1 {
+  margin: auto;
+}
+
+header h1 a {
+  color: #fff;
+  font-size: 25px;
+  font-weight: 200;
+  letter-spacing: 10px;
+  text-transform: uppercase;
+}
 
 #breadcrumb {
   padding: 10px 40px 16px;
@@ -124,56 +124,78 @@ header {
   font-size: 17px;
   margin: 0;
   /*width: calc(50% - 80px);*/
-  max-width: 100%; }
+  max-width: 100%;
+}
+
 
 /* Display list items side by side */
+
 #breadcrumb li {
-  display: inline; }
+  display: inline;
+}
+
 
 /* Add a slash symbol (/) before/behind each list item */
-#breadcrumb li + li:before {
+
+#breadcrumb li+li:before {
   padding: 8px;
   color: black;
-  content: "/\00a0"; }
+  content: "/\00a0";
+}
+
 
 /* Add a color to all links inside the list */
+
 #breadcrumb li a {
   color: #006cc9;
-  text-decoration: none; }
+  text-decoration: none;
+}
+
 
 /* Add a color on mouse-over */
+
 #breadcrumb li a:hover {
   color: #01447e;
-  text-decoration: underline; }
+  text-decoration: underline;
+}
+
 
 /* ====================== Map ====================== */
+
 #map {
   height: 400px;
   width: 100%;
-  background-color: #ccc; }
+  background-color: #ccc;
+}
 
 .leaflet-control-attribution.leaflet-control a {
-  color: #0075a4; }
+  color: #0075a4;
+}
+
 
 /* ====================== Restaurant Filtering ====================== */
+
 .filter-options-content {
   max-width: 1480px;
-  margin: 0 auto; }
+  margin: 0 auto;
+}
 
 .filter-options {
   width: 100%;
   background-color: #252831;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  padding: 5px; }
+  -ms-flex-align: center;
+  align-items: center;
+  padding: 5px;
+}
 
 .filter-options h2 {
   color: white;
   font-size: 18px;
   font-weight: normal;
   line-height: 1;
-  margin: 10px; }
+  margin: 10px;
+}
 
 .filter-options select {
   background-color: white;
@@ -185,9 +207,12 @@ header {
   margin: 10px;
   padding: 0 10px;
   max-width: 200px;
-  width: 100%; }
+  width: 100%;
+}
+
 
 /* ====================== Restaurant Listing ====================== */
+
 #restaurants-list {
   background-color: #f3f3f3;
   list-style: outside none none;
@@ -199,54 +224,68 @@ header {
   display: flex;
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
+  -ms-flex-direction: row;
+  flex-direction: row;
   -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
+  flex-wrap: wrap;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center; }
-  #restaurants-list article {
-    background-color: #fff;
-    border: 2px solid #ccc;
-    font-family: Arial, sans-serif;
-    margin: 15px;
-    min-height: 380px;
-    padding: 20px;
-    text-align: left;
-    max-width: 300px; }
-    #restaurants-list article h3 {
-      color: #921a6e;
-      font-family: "Open Sans", Arial, sans-serif;
-      font-size: 22px;
-      font-weight: 200;
-      letter-spacing: 0;
-      line-height: 1.3;
-      margin: 20px 0 10px;
-      text-transform: capitalize; }
-    #restaurants-list article button {
-      background-color: #921a6e;
-      border-bottom: 3px solid #921a6e;
-      color: #fff;
-      display: inline-block;
-      font-size: 16px;
-      margin: 15px 0 0;
-      padding: 8px 30px 10px;
-      text-align: center;
-      text-decoration: none;
-      text-transform: uppercase;
-      width: 100%; }
-  #restaurants-list p {
-    margin: 0;
-    font-size: 16px; }
-  #restaurants-list .restaurant-img {
-    display: block;
-    margin: 0;
-    max-width: 100%;
-    height: auto;
-    overflow: hidden; }
+  -ms-flex-pack: center;
+  justify-content: center;
+}
+
+#restaurants-list article {
+  background-color: #fff;
+  border: 2px solid #ccc;
+  font-family: Arial, sans-serif;
+  margin: 15px;
+  min-height: 380px;
+  padding: 20px;
+  text-align: left;
+  max-width: 300px;
+}
+
+#restaurants-list article h3 {
+  color: #921a6e;
+  font-family: "Open Sans", Arial, sans-serif;
+  font-size: 22px;
+  font-weight: 200;
+  letter-spacing: 0;
+  line-height: 1.3;
+  margin: 20px 0 10px;
+  text-transform: capitalize;
+}
+
+#restaurants-list article button {
+  background-color: #921a6e;
+  border-bottom: 3px solid #921a6e;
+  color: #fff;
+  display: inline-block;
+  font-size: 16px;
+  margin: 15px 0 0;
+  padding: 8px 30px 10px;
+  text-align: center;
+  text-decoration: none;
+  text-transform: uppercase;
+  width: 100%;
+}
+
+#restaurants-list p {
+  margin: 0;
+  font-size: 16px;
+}
+
+#restaurants-list .restaurant-img {
+  display: block;
+  margin: 0;
+  max-width: 100%;
+  height: auto;
+  overflow: hidden;
+}
+
 
 /* ====================== Restaurant Details ====================== */
+
+
 /*
 .inside header {
   position: fixed;
@@ -254,6 +293,7 @@ header {
   width: 100%;
   z-index: 1000;
 } */
+
 .inside #map-container {
   background: blue none repeat scroll 0 0;
   height: 30vh;
@@ -261,17 +301,20 @@ header {
   /*right: 0;*/
   /*top: 80px;*/
   width: 100%;
-  margin-bottom: 20px; }
+  margin-bottom: 20px;
+}
 
 .inside #map {
   background-color: #ccc;
   height: 100%;
-  width: 100%; }
+  width: 100%;
+}
 
 .inside #footer {
   /*bottom: 0;*/
   /*position: absolute;*/
-  width: 100%; }
+  width: 100%;
+}
 
 #restaurant-name {
   color: #921a6e;
@@ -280,29 +323,33 @@ header {
   letter-spacing: 0;
   margin: 15px 0 30px;
   text-transform: capitalize;
-  line-height: 1.1; }
+  line-height: 1.1;
+}
 
 #restaurant-img {
   width: 100%;
   overflow: hidden;
-  height: 100%; }
+  height: 100%;
+}
 
 #restaurant-details {
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  width: 100%; }
+  flex-wrap: wrap;
+  width: 100%;
+}
 
 #restaurant-address {
   font-size: 16px;
   font-weight: 700;
   margin: 10px 0px;
-  width: 100%; }
+  width: 100%;
+}
 
 #restaurant-cuisine {
   background-color: #333;
@@ -314,10 +361,10 @@ header {
   padding: 2px 0;
   text-align: center;
   text-transform: uppercase;
-  width: 100%; }
+  width: 100%;
+}
 
-#restaurant-container,
-#reviews-container {
+#restaurant-container, #reviews-container {
   border-bottom: 1px solid #d9d9d9;
   border-top: 1px solid #fff;
   padding: 20px;
@@ -325,29 +372,33 @@ header {
   margin: 0 auto;
   max-width: 980px;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -ms-flex-wrap: wrap;
-      flex-wrap: wrap; }
+  flex-wrap: wrap;
+}
 
 #reviews-container {
   /*padding: 30px 40px 80px;*/
   padding: 20px;
-  background: #fff; }
+  background: #fff;
+}
 
 #reviews-container h2 {
   color: #921a6e;
   font-size: 24pt;
   font-weight: 300;
   letter-spacing: -1px;
-  padding-bottom: 1pt; }
+  padding-bottom: 1pt;
+}
 
 #reviews-list {
   margin: 0;
-  padding: 0; }
+  padding: 0;
+}
 
 #reviews-list article {
   background-color: #fff;
@@ -358,7 +409,8 @@ header {
   overflow: hidden;
   padding: 0 20px 20px;
   position: relative;
-  width: 85%; }
+  width: 85%;
+}
 
 article .restaurant-copy {
   display: -webkit-box;
@@ -366,55 +418,70 @@ article .restaurant-copy {
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
   -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  min-height: 135px; }
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  min-height: 135px;
+}
 
 #reviews-list article p {
-  margin: 0 0 10px; }
+  margin: 0 0 10px;
+}
 
 #reviews-list li {
   border-bottom: 1px solid #a1a1a1;
-  margin: 15px; }
+  margin: 15px;
+}
 
 #reviews-list li:last-of-type {
-  border-bottom: none; }
+  border-bottom: none;
+}
 
 #reviews-list p[class*='review-'] {
-  margin: 2px 0; }
+  margin: 2px 0;
+}
 
 #reviews-list p.review-name {
   font-weight: 600;
-  color: #921a6e; }
+  color: #921a6e;
+}
 
 #reviews-list p.review-date:before {
   content: '|';
-  margin: 0 5px; }
+  margin: 0 5px;
+}
 
-#reviews-list p.review-name,
-#reviews-list p.review-date {
-  display: inline-block; }
+#reviews-list p.review-name, #reviews-list p.review-date {
+  display: inline-block;
+}
 
 #restaurant-hours td {
   color: #666;
-  font-size: 16px; }
+  font-size: 16px;
+}
+
 
 /* ====================== Accessibility ====================== */
+
 label {
-  display: none; }
+  display: none;
+}
+
 
 /* ====================== DESKTOP ====================== */
+
 @media only screen and (min-width: 1024px) {
-  /* body,
-  p,
-  button,
-  select {
-    font-size: 16px;
-  } */
+
+  header h1 a {
+    font-size: 30px;
+  }
   #footer {
-    font-size: 8pt; }
+    font-size: 8pt;
+  }
   #restaurants-list article {
-    width: 30%; } }
+    width: 30%;
+  }
+
+} /* END DESKTOP */
