--- a/css/styles.css
+++ b/css/styles.css
@@ -427,6 +427,26 @@ header h1 a {
   padding-bottom: 1pt;
 }
 
+#reviews-container .review-header {
+  display: block;
+  width: 100%;
+}
+
+#reviews-container .review-header h3 {
+  float: left;
+}
+
+#reviews-container .review-header #add-review {
+  float: right;
+  background-color: #921a6e;
+  color: #fff;
+  font-size: 16px;
+  padding: 8px 30px 10px;
+  text-align: center;
+  text-decoration: none;
+  text-transform: uppercase;
+}
+
 #reviews-list {
   margin: 0;
   padding: 0;
